2012-04-11	Evgeny V. Kokovikhin
	
	* main/Monitoring/PinbaClient.class.php: base ability of
	tree (integral) logging added. thanks to Artem A. Naumenko

2012-04-04	Georgiy T. Kutsurua
	
	* main/UI/View/JsonPView.class.php,
		main/UI/View/JsonPView.class.php:
		For easy using jsonp, @see http://www.json-p.org/

2012-03-26	Alexey S. Denisov
	
	* core/DB/SQLitePDO.class.php: Added SQLite3 though PDO

2012-03-14	Alexander A. Sayapin
	
	* core/Base/Date.class.php: Fixed calculating number of weeks in year accordingly ISO 8601.

2012-01-13	Alexander A. Zaytsev
	
	* core/Base/Date.class.php: toFormatString method added.

2012-01-11	Evgeny V. Kokovikhin

	* core/DB/Dialect.class.php: throw exception for null values. Thanks to 
	Nikita V. Konstantinov.

2011-11-21      Alexey S. Denisov, Evgeny V. Kokovikhin
	
	* meta/types/ObjectType.class.php, test/misc/DAOTest.class.php: changed logic
	for getObjectId method of lazy encapsulant; test for lazy logic added

2011-11-29	Igor V. Gulyaev

	* test/main/ViewTest.class.php: added View test

2011-11-21	Evgeny V. Kokovikhin

	* core/DB/PostgresDialect.class.php, test/main/PostgresDialectTest.class.php:
	use mb_* string function for utf-8 strings.

2011-11-18	Sergey S. Sergeev

	* main/Utils/AMQP/AMQPConsumer.class.php,
	main/Utils/AMQP/AMQPDefaultConsumer.class.php,
	main/Utils/AMQP/Pecl/AMQPPeclChannel.class.php:
	handle the change of СonsumerTag implemented.

2011-11-18	Evgeny V. Kokovikhin

	* main/Messages/TextMessage.class.php, main/Messages/TextFileReceiver.class.php:
	a bit optimize: don't needed to make Timestamp twice.

2011-11-17	Sergey S. Sergeev

	* main/Base/LightMetaProperty.class.php: speed up insert or update operations,
	removes loading objects if property is lazy. Thanks to Alexander V. Solomatin.

2011-11-14	Dmitry V. Snezhinskiy

	* main/Utils/AMQP/Pecl/AMQPPeclChannel.class.php :
	customize AMQPPeclChannel Exception. Author Evgenia T. Tekalin.

2011-11-14	Evgeny V. Kokovikhin
